fix spacing and unclosed ul tags

--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ a:link {
 }
 
 a:active {
-  color: red;
+  color: blue;
 }
 
 p::first-letter {
